# project1

./: README.md  main.py  pyproject.toml
src/: category.py  utils.py
tests/: conftest.py  test_category.py  test_product.py  test_utils.py
